--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,11 @@
 <% extends 'base.html' %>
 
-<% block title %>Login &middot; Let's Chat Morning<% endblock %>
+<% block title %>Login &middot; Let's Chat<% endblock %>
 
 <% block class %>lcb-login animated fadeIn<% endblock %>
 
 <% block attributes %>
-    style="background-image: url('./media/img/photos/<$ photo $>');"
+    style="background-image: url('./whoops/media/img/photos/<$ photo $>');"
 <% endblock %>
 
 <% block js %>
