--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 <% extends 'base.html' %>
 
-<% block title %>Login &middot; Let's Chat Morning<% endblock %>
+<% block title %>Login &middot; Let's Chat Blue<% endblock %>
 
 <% block class %>lcb-login animated fadeIn<% endblock %>
 
